Change log adding last modification

--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -48,6 +48,7 @@
                 <h2>Version {{VersionNumber}}</h2>
                 <lu>
                     <li>Added missing on/off buttons in mailing tab</li>
+                    <li>Changed max stack for coffee and mining pick up to 20 instead of 5 (6.1)</li>
                 </lu>
                 <h2>Version 2.0.4.0</h2>
                 <lu>
