--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -44,6 +44,10 @@
             </p>
             <div style="padding-left: 20px;">
                 <h3>Change Log</h3>
+                <h2>Version 2.1.17.0</h2>
+                <lu>
+                    <li>Added fix for work orders settings not loading correctly</li>
+                </lu>
                 <h2>Version 2.1.16.0</h2>
                 <lu>
                     <li>Added fix for milling only flytrap</li>
