--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -8,12 +8,17 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="yes"/>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.js"></script>
     <script src="https://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
+
+    <script src="https://rawgithub.com/angular-ui/ui-sortable/master/src/sortable.js"></script>
 
     <script src="./Libraries/SmartTable/smart-table.min.js"></script>
     <script src="./Libraries/slider/slider.js"></script>
@@ -439,11 +444,16 @@
             </div>
         </tab>
 
+
+
+
+        <!-- Missions rewards tab -->
         <tab heading="Missions">
             <div ng-controller="missionsListController">
                 <div class="tab-intro">
                     <h2>Missions Engine</h2>
                 </div>
+
 
 
                 <div layout="row" class="general-option-header">
@@ -474,104 +484,67 @@
                            min="0" max="50">
                 </div>
 
-                <!-- Filter list by category -->
 
-
-                <!-- Display list based on filter -->
-                <md-list>
-                    <md-item ng-repeat="row in MissionRewards">
-                        <md-item-content>
-
-                            <div ng-controller="RewardController" ng-init="init(row)" layout="column">
-                                <div layout="row">
-                                    <h2>{{row.name}}</h2>
-
-                                    <h3>{{row.category}}</h3>
-                                </div>
-
-                                <div layout="row">
-                                </div>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <p>Disable Reward</p>
-                                        </td>
-                                        <td>
-                                            <switch id="enabled" name="enabled" ng-model="row.disallowed"
-                                                    class="green"></switch>
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>
-                                            <p>Custom Success Chance</p></td>
-
-                                        <td>
-                                            <switch id="enabled" name="enabled" ng-model="row.individualSuccessEnabled"
-                                                    class="green"></switch>
-                                        </td>
-                                    </tr>
-
-                                </table>
-                                <div layout="row" style="width: 500px;">
-                                    <p style="margin-left: 4px; width: 325px;">Minimum Success Chance: </p>
-                                    <slider style="margin-left: 20px;" floor="0" ceiling="100" step="1" precision="1"
-                                            ng-model="building.maxCanStartOrder"></slider>
-                                    <input style="width:62px;height: 35px" ng-init="$scope.$apply();" type="number"
-                                           ng-model="building.maxCanStartOrder" aria-label="red"
-                                           aria-controls="{{nameNoSpaces}}-slider" min="0" max="50">
-                                </div>
-
-                            </div>
-                        </md-item-content>
-                    </md-item>
-                </md-list>
-
+                <div class="floatleft" style="margin-left: 20px;">
+                    <ul class="list logList">
+                        <li ng-repeat="entry in sortingLog track by $index" class="logItem">
+                            {{entry}}
+                        </li>
+                    </ul>
+                </div>
 
                 <table st-table="MissionRewards" class="table">
                     <thead>
                     <tr>
-                        <th st-sort="name" st-sort-default>Reward</th>
-                        <th st-sort="name" st-sort-default>Category</th>
-                        <th st-sort="activated">Disalowed</th>
-                        <th st-sort="activated">Enabled</th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Disallowed</th>
+                        <th>Player Level</th>
+                        <th>Mission Level</th>
+                        <th>Custom Success chances</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in MissionRewards">
-
+                    <tbody ui-sortable="sortableOptions" ng-model="MissionRewards">
+                    <tr ng-repeat="row in MissionRewards" class="item" style="cursor: move;">
                         <td>
-                            <div ng-controller="RewardController" ng-init="init(row)">{{row.name}}</div>
+                            <div ng-controller="RewardController" ng-init="init(row)">
+                                {{row.name}}
+                            </div>
                         </td>
-
-                        <td>{{row.category}}</td>
-
+                        <td>
+                            {{row.category}}
+                        </td>
                         <td>
                             <switch id="enabled" name="enabled" ng-model="row.disallowed" class="green"></switch>
                         </td>
-
                         <td>
-                            <switch id="enabled" name="enabled" ng-model="row.individualSuccessEnabled"
-                                    class="green"></switch>
+                            <!-- editable value (text with validation) -->
+                            <span editable-text="row.playerLevel">
+                              {{ row.playerLevel || 'empty' }}
+                            </span>
                         </td>
-                        <br/>
-
-                        <div layout="row" style="width: 500px;">
-                            <h3 style="margin-left: 4px;">Default Minimum Success Chance: </h3>
-                            <slider style="margin-left: 20px;" floor="0" ceiling="100" step="1" precision="1"
-                                    ng-model="building.maxCanStartOrder"></slider>
-                            <input style="width:62px;height: 35px" ng-init="$scope.$apply();" type="number"
-                                   ng-model="building.maxCanStartOrder" aria-label="red"
-                                   aria-controls="{{nameNoSpaces}}-slider" min="0" max="50">
-                        </div>
-
-
+                        <td>
+                            <!-- editable value (text with validation) -->
+                            <span editable-text="row.missionLevel">
+                              {{ row.missionLevel || 'empty' }}
+                            </span>
+                        </td>
+                        <td>
+                            <div layout="row" style="width: 500px;">
+                                <switch id="enabled" name="enabled" ng-model="row.individualSuccessEnabled" class="green"></switch>
+                                <slider style="margin-left: 20px;" floor="0" ceiling="100" step="1" precision="1"
+                                        ng-model="row.successChance"></slider>
+                                <input style="width:62px;height: 35px" ng-init="$scope.$apply();" type="number"
+                                       ng-model="row.successChance" aria-label="red"
+                                       aria-controls="{{nameNoSpaces}}-slider" min="0" max="50">
+                            </div>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
-
-
             </div>
+
+
         </tab>
 
     </tabset>
