--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -8,17 +8,12 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.js"></script>
     <script src="https://cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
-
-    <script src="https://rawgithub.com/angular-ui/ui-sortable/master/src/sortable.js"></script>
 
 
     <script src="./Libraries/SmartTable/smart-table.min.js"></script>
@@ -36,8 +31,6 @@
 
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.0/angular-material.min.css">
-
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
 
     <link rel="stylesheet" href="./Libraries/angular-xeditable/css/xeditable.css" />
     <link rel="stylesheet" href="./mainUI.css" />
@@ -445,7 +438,7 @@
             <table st-table="MissionRewards" class="table">
                 <thead>
                 <tr>
-                    <th><h2>Default settings</h2></th>
+                    <th class="column"><h2>Default settings</h2></th>
                     <th><h2>Value</h2></th>
                 </tr>
                 </thead>
@@ -509,6 +502,58 @@
                                min="0" max="100">
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <b>MinimumGarrisonResourcesToStartMissions</b>
+                    </td>
+                    <td>
+                        <slider style="margin-left: 20px;width: 300px;" floor="0" ceiling="100" step="1" precision="1"
+                                ng-model="MinimumGarrisonResourcesToStartMissions"></slider>
+                        <input style="width:50px;height: 27px" ng-init="$scope.$apply();" type="number"
+                               ng-model="MinimumGarrisonResourcesToStartMissions" aria-label="red" aria-controls="{{nameNoSpaces}}-slider"
+                               min="0" max="10000">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>PreferFollowersWithScavengerForGarrisonResourcesReward</b>
+                    </td>
+                    <td>
+                        <switch id="enabled" name="enabled" ng-model="PreferFollowersWithScavengerForGarrisonResourcesReward" class="green"></switch>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>PreferFollowersWithTreasureHunterForGoldReward</b>
+                    </td>
+                    <td>
+                        <switch id="enabled" name="enabled" ng-model="PreferFollowersWithTreasureHunterForGoldReward" class="green"></switch>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>DisallowScavengerOnNonGarrisonResourcesMissions</b>
+                    </td>
+                    <td>
+                        <switch id="enabled" name="enabled" ng-model="DisallowScavengerOnNonGarrisonResourcesMissions" class="green"></switch>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>DisallowTreasureHunterOnNonGoldMissions</b>
+                    </td>
+                    <td>
+                        <switch id="enabled" name="enabled" ng-model="DisallowTreasureHunterOnNonGoldMissions" class="green"></switch>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>DisallowRushOrderRewardIfBuildingDoesntExist</b>
+                    </td>
+                    <td>
+                        <switch id="enabled" name="enabled" ng-model="DisallowRushOrderRewardIfBuildingDoesntExist" class="green"></switch>
+                    </td>
+                </tr>
             </table>
 
 
@@ -516,6 +561,7 @@
         <table st-table="MissionRewards" class="table">
         <thead>
         <tr>
+            <th>Priority</th>
         <th>Name</th>
         <th>Category</th>
         <th>Disallowed</th>
@@ -524,42 +570,55 @@
         <th>Custom Success chances</th>
         </tr>
         </thead>
-        <tbody ui-sortable="sortableOptions" ng-model="MissionRewards">
-        <tr ng-repeat="row in MissionRewards" class="item" style="cursor: move;">
-        <td>
-        <div ng-controller="RewardController" ng-init="init(row)">
-            <a ng-if="canWowhead(row)" ng-href='http://www.wowhead.com/item={{ row.rewardId || "empty" }}' class="q2"></a>
-            <p ng-if="!canWowhead(row)">{{row.rewardName}}</p>
-        </div>
-        </td>
-        <td>
-        {{row.rewardCategory}}
-        </td>
-        <td>
-        <switch id="enabled" name="enabled" ng-model="row.disallowReward" class="green"></switch>
-        </td>
-        <td>
-        <!-- editable value (text with validation) -->
-        <span editable-text="row.playerLevel">
-        {{ row.playerLevel || 'empty' }}
-        </span>
-        </td>
-        <td>
-        <!-- editable value (text with validation) -->
-        <span editable-text="row.missionLevel">
-        {{ row.missionLevel || 'empty' }}
-        </span>
-        </td>
-        <td>
-        <div layout="row" style="width: 500px;">
-        <switch id="enabled" name="enabled" ng-model="row.individualSuccessEnabled" class="green"></switch>
-        <slider style="margin-left: 20px;" floor="0" ceiling="100" step="1" precision="1"
-        ng-model="row.successChance"></slider>
-        <input style="width:62px;height: 35px" ng-init="$scope.$apply();" type="number"
-        ng-model="row.successChance" aria-label="red"
-        aria-controls="{{nameNoSpaces}}-slider" min="0" max="50">
-        </div>
-        </td>
+        <tbody ng-model="MissionRewards">
+        <tr ng-repeat="row in MissionRewards">
+
+            <div ng-controller="RewardController" ng-init="init(row)">
+                <td>
+                    <span editable-text="row.priorityList" onaftersave="updateList()">
+                    {{ row.priorityList }}
+                    </span>
+                </td>
+            </div>
+
+            <td>
+            <div>
+                <a ng-if="canWowhead(row)" ng-href='http://www.wowhead.com/item={{ row.rewardId || "empty" }}' class="q2"></a>
+                <p ng-if="!canWowhead(row)">{{row.rewardName}}</p>
+            </div>
+            </td>
+
+            <td>
+                {{row.rewardCategory}}
+            </td>
+
+            <td>
+                <switch id="enabled" name="enabled" ng-model="row.disallowReward" class="green"></switch>
+            </td>
+
+            <td>
+                <!-- editable value (text with validation) -->
+                <span editable-text="row.playerLevel">
+                {{ row.playerLevel || 'empty' }}
+                </span>
+            </td>
+
+            <td>
+                <!-- editable value (text with validation) -->
+                <span editable-text="row.missionLevel">
+                {{ row.missionLevel || 'empty' }}
+                </span>
+            </td>
+
+            <td>
+                <div layout="row" style="width: 500px;">
+                <switch id="enabled" name="enabled" ng-model="row.individualSuccessEnabled" class="green"></switch>
+                    <!-- editable value (text with validation) -->
+                <span editable-text="row.successChance">
+                {{ row.successChance }}%
+                </span>
+                </div>
+            </td>
         </tr>
         </tbody>
         </table>
