Added fix for mailing not allowing 0 as a value Added Design improvements to change log

--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -145,74 +145,78 @@
     <tabset>
 
         <tab heading="GarrisonButler">
-            <p>
-                Welcome! <br />
+               <md-content>
+                    <md-card>
 
-            </p>
-            <div style="padding-left: 20px;">
-                <h3>Change Log</h3>
-                <h2>Version 2.3.0.0</h2>
-                <lu>
-                    <li>Added options in Missions settings. Check them out! :D</li>
-                    <li>Added description for default settings in Missions</li>
-                    <li>Replaced drag and drop to set the priority of rewards, will now have to fill a text box with the number.</li>
-                    <li>Fix incorrect work order getting stuckbug</li>
-                    <li>Upped timer time for cached action to 15 seconds from 10seconds to fix yoyo bug in mine between ores and carts.</li>
-                    <li>Added UI design enhancements</li>
-                </lu>
-                <h2>Version 2.1.17.0</h2>
-                <lu>
-                    <li>Added fix for work orders settings not loading correctly</li>
-                </lu>
-                <h2>Version 2.1.16.0</h2>
-                <lu>
-                    <li>Added fix for milling only flytrap</li>
-                </lu>
-                <h2>Version 2.1.15.0</h2>
-                <lu>
-                    <li>Added fix for mail options not sticking.</li>
-                </lu>
-                <h2>Version 2.1.14.0</h2>
-                <lu>
-                    <li>Changed "Vendor" Reward action to 9</li>
-                    <li>Added "None" Reward action as 0</li>
-                    <li>Fix more mission bugs with Max Level Followers and not honoring Disallowed Mission Rewards</li>
-                </lu>
-                <h2>Version 2.1.12.0</h2>
-                <lu>
-                    <li>Allow epic 100s to boost lower level followers.</li>
-                </lu>
-                <h2>Version 2.1.11.0</h2>
-                <lu>
-                    <li>Workaround for StartWorkOrderButton not working properly (will fail out after 10 tries)</li>
-                    <li>Fixed index out of bounds for movement & additional diag for missions</li>
-                    <li>Preparing follower gears support</li>
-                    <li>Enhanced Missions are now only available to ICE edition. Lite edition uses old logic.</li>
-                    <li>Fix bug when "valid" is set to false but never reset to true inside Mission Calculations</li>
-                    <li>Fix bug when missions were being skipped when the first mission in a set was less slots than the number of followers.</li>
-                    <li>Will use "create all" button for work orders</li>
-                    <li>Workaround for "floating mines" Blizzard has</li>
-                    <li>Added Check for mission type being logistics to return 100% success</li>
-                    <li>Fix bugs with new missions</li>
-                </lu>
-                <h2>Version 2.1.1.0</h2>
-                <lu>
-                    <li>Modified default success chance to 100%.</li>
-                </lu>
-                <h2>Version 2.1.0.0</h2>
-                <lu>
-                    <li>Added mission engine (see settings files for configuration, UI on the way).</li>
-                </lu>
-                <h2>Version 2.0.4.0</h2>
-                <lu>
-                    <li>New User Interface</li>
-                    <li>Fixed bot stopped at startup</li>
-                    <li>Fixed mail non deleted in settings</li>
-                    <li>Added diag output to Buildings</li>
-                    <li>Added missing on/off buttons in mailing tab</li>
-                    <li>Changed max stack for coffee and mining pick up to 20 instead of 5 (6.1)</li>
-                </lu>
-            </div>
+                        <md-card-content>
+                            <div layout="row">
+                                <div style="max-width: 350px; text-align: center;">
+                                    <img src="http://i.imgur.com/5YLK4Ik.png" width="200px">
+                                </div>
+                                <h1 style="padding-left: 30px; padding-top: 20px;">Change Log</h1>
+                            </div>
+                        </md-card-content>
+                    </md-card>
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.3.0.0</h2>
+                            <lu>
+                                <li>Added options in Missions settings. Check them out! :D</li>
+                                <li>Added description for default settings in Missions</li>
+                                <li>Replaced drag and drop to set the priority of rewards, will now have to fill a text box with the number.</li>
+                                <li>Fix incorrect work order getting stuckbug</li>
+                                <li>Upped timer time for cached action to 15 seconds from 10seconds to fix yoyo bug in mine between ores and carts.</li>
+                                <li>Added UI design enhancements</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+
+
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.1.17.0</h2>
+                            <lu>
+                                <li>Added fix for work orders settings not loading correctly</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.1.16.0</h2>
+                            <lu>
+                                <li>Added fix for milling only flytrap</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.1.15.0</h2>
+                            <lu>
+                                <li>Added fix for mail options not sticking.</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.1.14.0</h2>
+                            <lu>
+                                <li>Changed "Vendor" Reward action to 9</li>
+                                <li>Added "None" Reward action as 0</li>
+                                <li>Fix more mission bugs with Max Level Followers and not honoring Disallowed Mission Rewards</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+                    <md-card>
+                        <md-card-content>
+                            <h2>Version 2.1.14.0</h2>
+                            <lu>
+                                <li>Changed "Vendor" Reward action to 9</li>
+                                <li>Added "None" Reward action as 0</li>
+                                <li>Fix more mission bugs with Max Level Followers and not honoring Disallowed Mission Rewards</li>
+                            </lu>
+                        </md-card-content>
+                    </md-card>
+                </md-content>
         </tab>
 
 
@@ -442,7 +446,7 @@
                         </td>
                         <td>
                             <!-- editable value (text with validation) -->
-                            <span editable-text="row.value" e-name="value" e-form="rowform" onbeforesave="checkEmpty($data)" e-required>
+                            <span editable-text="row.value" e-name="value" e-form="rowform" onbeforesave="checkEmptyInt($data)" e-required>
                               {{ row.value || 'empty' }}
                             </span>
                         </td>
