--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -157,7 +157,20 @@
                             </div>
                         </md-card-content>
                     </md-card>
-                    <md-card>
+
+
+                   <md-card>
+                       <md-card-content>
+                           <h2>Version 2.3.2.0</h2>
+                           <lu>
+                               <li>Added fix for UI not allowing 0 as a value in mailing tab.</li>
+                               <li>Improved Change Log UI</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+
+                   <md-card>
                         <md-card-content>
                             <h2>Version 2.3.0.0</h2>
                             <lu>
