--- a/WebUI/mainUI.html
+++ b/WebUI/mainUI.html
@@ -161,6 +161,15 @@
 
                    <md-card>
                        <md-card-content>
+                           <h2>Version 2.3.3.0</h2>
+                           <lu>
+                               <li>Added fix for UI not refreshing priorities for missions' rewards.</li>
+                           </lu>
+                       </md-card-content>
+                   </md-card>
+
+                   <md-card>
+                       <md-card-content>
                            <h2>Version 2.3.2.0</h2>
                            <lu>
                                <li>Added fix for UI not allowing 0 as a value in mailing tab.</li>
